# TFG

./: README.md
docker/: Dockerfile.cloud_discovery_service  Dockerfile.fleet_managment_service  Dockerfile.python_car  Dockerfile.routing_service  Dockerfile.webint_maps
kubernetes/: automation.sh  dockerhub-secret.yaml  routing-config.xml
kubernetes/Cars/templates/: cars_deployment.yaml
kubernetes/MapsDemo/templates/: cds_local_deployment.yaml  fms_deployment.yaml  routing_deployment.yaml  wis_deployment.yaml
kubernetes/Services/: Chart.yaml
kubernetes/Services/templates/: cds_local_clusterIp.yaml  routing_loadBalancer.yaml  wis_loadBalancer.yaml
srcPy/: Dockerfile  Jenkinsfile  README.md  README.txt  __init__.py  fleet.idl  pyproject.toml
srcPy/car_app/: USER_QOS_PROFILES.xml  __init__.py  car.py  car_participant.py  gps.py  maps_types.py  osmap.py
srcPy/fleet_managment_service/: README.txt  USER_QOS_PROFILES.xml  __init__.py  fleet_participant.py  maps_types.py
srcPy/tests/: __init__.py
srcPy/types_support/: README.txt  __init__.py  maps_types.idl  maps_types.py
web_integration_service/: index.html
web_integration_service/maps_webint/: maps_demo.xml
web_integration_service/maps_webint/js/: README.md  index.html  maps_demo.js
web_integration_service/resources/css/: map_style.css
